src/test/deca/context/valid/created/sans_objet/operateur_arith_4.deca
// Description:
//    Programme minimaliste utilisant operateur arith.
//
// Resultats:
//  
//
// Historique:
//    cree le 13/01/2024

{
        float a = 2;
        float b = 1;
        float x= a * b ;
}