src/test/deca/context/invalid/created/sans_objet/operateur_arith_2.deca
// Description:
//    Programme minimaliste utilisant operateur arith.
//
// Resultats:
//   error : float + float = float
//
// Historique:
//    cree le 13/01/2024

{
        float a = 2;
        float b = 1;
        int x= a + b ;
}